src/test/fail/trigger_formaterror.ly
#[
FormatError: Not enough args for printfmt.
Traceback:
    Function printfmt [builtin]
    Function __main__ at line 8
]#

printfmt("%s%s%s%s%s", "")
